# Trading-Partner

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  api.py  auth.py  bootstrap.py  config.py  data_seed.py  main.py  repository.py  schedule.py  worker.py
apps/api/app/models/: contracts.py
apps/api/app/services/: __init__.py  explanations.py  market_data.py  providers.py  recommendations.py
apps/api/investment_research_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_alerts.py  test_api.py  test_auth.py  test_explanations.py  test_market_adapters.py  test_personalization_flow.py  test_providers.py  test_recommendation_engine.py  test_schedule.py
apps/web/: eslint.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/app/app/alerts/: page.tsx
apps/web/app/app/assets/[assetId]/: page.tsx
apps/web/app/app/explore/: page.tsx
apps/web/app/app/settings/: page.tsx
apps/web/app/app/watchlist/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/sign-in/: page.tsx
apps/web/components/: alerts-panel.tsx  app-shell.tsx  market-context-strip.tsx  recommendation-card.tsx  settings-form.tsx  tradingview-market-overview.tsx  tradingview-widget.tsx  watchlist-client.tsx
apps/web/lib/: api.ts  format.ts  mock-data.ts  profile.ts
apps/web/lib/supabase/: client.ts
apps/web/tests/: alerts-panel.test.tsx  app-shell.test.tsx  recommendation-card.test.tsx
docs/: architecture.md
